--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -89,7 +89,7 @@
                                 <div class="item-title">{name}</div>
                                 <div class="item-after housework-2">
                                     <div class="housework-8 sub-num">-</div>
-                                    <input name="serviceNum" class="housework-9 service-num" value="1" />
+                                    <input name="serviceNum" class="housework-9 service-num" value="{number}" />
                                     <div class="housework-8 add-num">+</div>
                                 </div>
                             </div>
