--修正厨卫深度清洁里文案

--- a/jhj-web-user/order/deepIntro/order-deep-intro-35.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-35.html
@@ -4,25 +4,31 @@
 		<p>服务介绍</p>
 	</div>
 	<p class="special-color1">温馨提示：</p>
-	<p class="special-color1">厨房清洁不包含拆洗油烟机，只清理油烟机表面</p>
+	<p class="special-color1">
+        1.厨房深度清洁电器清洗部分包含厨房内所有厨电，家庭其他区域电器清洗不包含
+    </p>
+    <p class="special-color1">
+        2.卫生间深度清洁包含洗衣机一台（免拆）的清洗，热水器表面清洗
+    </p>
 </div>
 <div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
         <div class="shendu-title-1"></div>
         <p>服务内容</p>
     </div>
-    <p>1.厨房全面清洁，除污、除油、蒸汽无缝杀菌、橱柜及瓷砖面抑菌处理。</p>
-    <p> 2.卫生间洁具、瓷砖除污垢、水纹、蒸汽无缝杀菌，卫浴设施全面清洁、消毒、抑菌处理。</p>
+    <p>1.油烟机、灶台、微波炉、冰箱等厨房电器，橱柜内外深度清洗，全屋高温消毒杀菌。</p>
+    <p>2.洗衣机、热水器免拆清洗、卫生洁具、墙、地面除垢及表面擦拭，全屋高温消毒杀菌。</p>
 </div>
 
 <div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
         <div class="shendu-title-1"></div>
-        <p>服务流程</p>
+        <p>清洗流程</p>
     </div>
-    <p>1.深度清洁，包含橱柜内所有物品取出逐个擦拭</p>
-    <p>2.物品摆放，物品归类</p>
-    <p>3.高温消毒杀菌，包含所有物品设备，柜内、墙面、顶棚</p>
+    <p>1.深度清洁，除油渍、除水垢包含橱柜内所有物品取出逐个擦拭</p>
+    <p>2.高温消毒杀菌，包含所有物品设备，柜内、墙面、顶棚</p>
+    <p>3.油烟机灶具等电器的清洗</p>
+    <p>4.物品摆放，物品归类</p>
     <img src="img/chuweixiaodu/chuwei1.png" alt="" class="all-img4">
     <img src="img/chuweixiaodu/chuwei2.png" alt="" class="all-img4">
     <img src="img/chuweixiaodu/chuwei3.png" alt="" class="all-img4">
