--- a/jhj-web-user/html/shareSuccess.html
+++ b/jhj-web-user/html/shareSuccess.html
@@ -29,6 +29,7 @@
                             </div>
                             <div class="return-button">
                                 <img src="../img/share/return-button.png" alt="">
+                                <a href="javascript:void(0)"></a>
                             </div>
                             <div class="share-bottom">
                                 <img src="../img/share/share-bottom.png" alt="">
