--微波炉和电烤箱

--- a/jhj-web-user/order/deepIntro/order-deep-intro-79.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-79.html
@@ -3,8 +3,20 @@
         <div class="shendu-title-1"></div>
         <p>服务介绍</p>
     </div>
-    <p class="special-color1">
-        微波炉能够快速的加热食物，因此对于很多人，特别是快节奏生活下的年轻一族来说，是一款非常便捷的厨房小电器。但是你知道吗？微波炉使用久了，容易堆积下大量的细菌，不及时清洁就用来处理食材的话，容易危害人体健康。</p>
+    <p class="special-color1">温馨提示：</p>
+    <p class="special-color1">请参考实际机型下单，如上门服务后发现实际机型与下单机型不符，差额部分多退少补</p>
+    <img src="img/taocan/kx1.jpg" alt="" class="all-img4">
+    <img src="img/taocan/kx2.jpg" alt="" class="all-img4">
+    <div class="chongzhi5-kong2"></div>
+</div>
+<div class="shendu-bx">
+    <div class="shendu-title" style="clear:both;margin-top:10px;">
+        <div class="shendu-title-1"></div>
+        <p>服务特点</p>
+    </div>
+    <p class="special-color8">
+        经过几个月的烧烤和烘培，烤箱会变得有些脏兮兮的。累积的油脂和烧焦的食物聚集并转化为碳，导致烹调时有浓烈的糊味。要是让你的烤箱持续覆盖着碳，最终会玷污你的食物，甚至成为火灾隐患。</p>
+    <img src="img/taocan/kx3.jpg" alt="" class="all-img">
     <div class="chongzhi5-kong2"></div>
 </div>
 <div class="shendu-bx">
@@ -12,7 +24,6 @@
         <div class="shendu-title-1"></div>
         <p>工具设备</p>
     </div>
-    <img src="img/taocan/wbl1.png" alt="" class="all-img">
     <div class="chongzhi5-kong2"></div>
     <div class="chongzhi5-kong2"></div>
     <div class="chongzhi5-kong2"></div>
