--- a/jhj-web-user/html/order-cus-hostwork-month.html
+++ b/jhj-web-user/html/order-cus-hostwork-month.html
@@ -101,7 +101,7 @@
                                         <p>让油污重灾区清洁一新</p>
                                     </li>
                                     <li>
-                                        <img src="../img/jiawubaoyue/chufang.png" alt="">
+                                        <img src="../img/jiawubaoyue/woshi.png" alt="">
                                         <span>卧室</span>
                                         <p>清洁加整理  卧室美美哒</p>
                                     </li>
