--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -23,9 +23,9 @@
 					</a>
 				</div>
 				<div class="jinpai-index">
-					<a href="order/fiveservice/order-cus-hostwork-month.html" >
-						<img src="img/jinpaibaojie/jinpai-index-5.png" alt="">
-						<p>家务包月</p>
+					<a href="order/order-deep-intro.html?service_type_id=83" >
+						<img src="img/jinpaibaojie/jinpai-index-7.png" alt="">
+						<p>一厨一卫</p>
 					</a>
 				</div>
 				<div class="jinpai-index">
