--图片压缩 --修正页面  空调清洗  包月初体验   母婴到家二级

--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -31,6 +31,9 @@
                             <div class="swiper-slide">
                                 <a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/indexthree/banner10.jpg" alt="" style="width: 100%; padding: 0;"></a>
+                            </div>
                         </div>
                     </div>
                     <!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
