--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -25,7 +25,7 @@
 				<div class="jinpai-index">
 					<a href="order/order-deep-intro.html?service_type_id=83" >
 						<img src="img/jinpaibaojie/jinpai-index-7.png" alt="">
-						<p>一厨一卫</p>
+						<p>一厨一卫日常保洁</p>
 					</a>
 				</div>
 				<div class="jinpai-index">
