--- a/jhj-web-user/order/order-mother-baby-index.html
+++ b/jhj-web-user/order/order-mother-baby-index.html
@@ -27,6 +27,8 @@
                 <a href="order/momAndBaby/order-baby-nurse.html" class="special-color7">
                     <img src="img/mother-baby/baomu.png" alt="">
                     <p>保姆</p>
+                    <p class="chirld-p">专业保姆</p>
+                    <p class="chirld-p">尽享品质生活</p>
                 </a>
             </div>
             <div class="shendu-circle">
