--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -33,8 +33,11 @@
                             <div class="swiper-slide">
                                 <a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
-                            <div class="swiper-slide">
+                         <!--   <div class="swiper-slide">
                                 <a href="#"><img src="img/indexthree/banner7.png" alt="" style="width: 100%; padding: 0;"></a>
+                            </div>-->
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/indexthree/banner10.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                         </div>
                     </div>
