--- a/jhj-web-user/order/order-deep-index.html
+++ b/jhj-web-user/order/order-deep-index.html
@@ -34,7 +34,7 @@
                 <div class="shendu-circle">
                     <a href="order/order-deep-intro.html?service_type_id=51" class="special-color7">
                         <img src="img/shendu/shendu-5.png" alt="">
-                        <p>空调清洗</p>
+                        <p style="color:#ff0000">空调清洗促销中</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
