--修正空调清洗

--- a/jhj-web-user/order/deepIntro/order-deep-intro-51.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-51.html
@@ -4,7 +4,8 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">如预约的空调机型与实际不符时，按实际收费，多退少补</p>
+    <p class="special-color1">1.空调促销机型两台起订购</p>
+    <p class="special-color1">2.如预约的空调机型与实际不符时，按实际收费，多退少补</p>
 </div>
 
 <div class="shendu-bx">
