--包月初体验

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -72,7 +72,7 @@
                             </div>
                         </a>
                         <div class="mincircle mincircle3">
-                            <a href="order/fiveservice/order-cus-hostwork-month.html">
+                            <a href="order/fiveservice/order-cus-hostwork-month.html?service_type_id=61">
                                 <div class="mincircle-one">
                                     <p>家务包月初体验</p>
                                     <p>新用户首单</p>
@@ -246,6 +246,10 @@
 <script type="text/javascript" src="js/period/period-order-confirm.js"></script>
 <script type="text/javascript" src="js/period/period-order-pay.js"></script>
 <script type="text/javascript" src="js/period/period-order-detail.js"></script>
+
+<!-- 包月初体验  -->
+<script type="text/javascript" src="js/order/fiveservice/order-cus-hostwork-month.js"></script>
+
 
 <script>
     var _hmt = _hmt || [];
