--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -5,8 +5,10 @@
 			<img src="#" alt="" class="all-img" id="order-hour-banner-img">
 			<div class="beijing-index">
 				<div class="shendu-bx">
-					<a href="order-pay-rili.html">
-						<div class="all-button" id="order-hour-click">立即预约</div>
+					<a href="#">
+						<button class="all-button" id="order-hour-click">
+							立即预约
+						</button>
 					</a>
 					<div class="shendu-bx-xd">
 						<ul class="shendu-bx-xd1">
