--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -6,7 +6,7 @@
 			<div class="beijing-index">
 				<div class="shendu-bx">
 					<a href="#">
-						<button class="all-button" id="order-hour-click">
+						<button class="all-button" id="order-hour-click" style="border: none;">
 							立即预约
 						</button>
 					</a>
