--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -1,5 +1,5 @@
 <div class="pages navbar-through toolbar-through">
-    <div data-page="order-list" class="page" style="overflow:auto;">
+    <div data-page="order-list" class="page">
         <div id="indexPageContentDiv" class="page-content">
             <div class="content-block">
                 <!-- tabs控制面板 -->
