--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -80,7 +80,7 @@
                             </a>
                         </div>
                         <div class="mincircle mincircle4">
-                            <a href="order/fiveservice/order-cus-index.html">
+                            <a href="order/fiveservice/order-cus-index.html?service_type_id=61">
                                 <div class="mincircle-one">
                                     <p>家务订制</p>
                                     <p>个性化订制</p>
