--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -27,17 +27,11 @@
                     <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
                         <div class="swiper-pagination"></div>
                         <div class="swiper-wrapper">
-                            <!-- <div class="swiper-slide">
-                                <a href="active/20170501.html"><img src="img/indexthree/banner6.png" alt="" style="width: 100%; padding: 0;"></a>
-                            </div> -->
                             <div class="swiper-slide">
                                 <a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
-                         <!--   <div class="swiper-slide">
-                                <a href="#"><img src="img/indexthree/banner7.png" alt="" style="width: 100%; padding: 0;"></a>
-                            </div>-->
                             <div class="swiper-slide">
-                                <a href="#"><img src="img/indexthree/banner10.jpg" alt="" style="width: 100%; padding: 0;"></a>
+                                <a href="order/order-deep-intro.html?service_type_id=51"><img src="img/indexthree/banner10.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                         </div>
                     </div>
