--- a/jhj-web-user/order/order-hour-choose.html
+++ b/jhj-web-user/order/order-hour-choose.html
@@ -11,7 +11,7 @@
 				<input type="hidden" id="pprice" name="pprice"" value="149">
 				<input type="hidden" id="mpprice" name="pprice"" value="135">
 				<div class="beijing-index">
-					<div class="waiter11" style="margin: 0;">
+					<div class="waiter11" style="margin: 0;" id="isShow">
 						<div class="waiter11-1">
 							<img src="img/yudingayi/waiter-1.png" alt="">
 							<div class="waiter11-1-1">预约服务人员数量</div>
