--修正包月初体验文字

--- a/jhj-web-user/order/fiveservice/61.html
+++ b/jhj-web-user/order/fiveservice/61.html
@@ -81,7 +81,7 @@
                     <li>
                         <img src="img/jiawubaoyue/woshi.png" alt="">
                         <span>卧室</span>
-                        <p>清洁加整理 卧室美美哒</p>
+                        <p>地漏马桶都消毒,洁癖程度可想而知</p>
                     </li>
                     <li>
                         <img src="img/jiawubaoyue/keting.png" alt="">
