--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -68,7 +68,7 @@
                         <div class="mincircle mincircle3">
                             <a href="order/fiveservice/order-cus-hostwork-month.html?service_type_id=61">
                                 <div class="mincircle-one">
-                                    <p>家务包月初体验</p>
+                                    <p>家务定制初体验</p>
                                     <p>新用户首单</p>
                                     <p>369元/4次</p>
                                 </div>
