--- a/jhj-web-user/order/order-appoint.html
+++ b/jhj-web-user/order/order-appoint.html
@@ -15,13 +15,8 @@
 				<!-- 可以下拉选择项目 -->
 			</div>
 			<ul class="waiter6" id="serviceTypeList">
-				{{#each data}}
-				{{#js_compare service_type_id!=69 && service_type_id!=70 && service_type_id!=71 && service_type_id!=73}}
-				<li class="waiter6-1" onclick="appoinSerivceType($$(this), {{service_type_id}})">{{service_type_name}}</li>
-				{{/js_compare}}
-				{{/each}}
+				<div id="serviceTypeList-li"></div>
 				<div class="chongzhi5-kong1"></div>
-				
 			</ul>
 			<div class="all-button2" onclick="doAppointOrder()">确定</div>
 		</div>
