-微网站页面

--- a/jhj-web-user/order/order-old-index.html
+++ b/jhj-web-user/order/order-old-index.html
@@ -38,7 +38,7 @@
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-old-homework.html" class="special-color7">
+                    <a href="order/order-deep-intro.html?service_type_id=80" class="special-color7">
                         <img src="img/wengjiajie/6.png" alt="">
                         <p>贴心家事</p>
                     </a>
@@ -49,19 +49,6 @@
                         <p>安居宝</p>
                     </a>
                 </div>
-               <!--  
-                <div class="shendu-circle">
-					<a href="order/order-old-yuesao.html">
-						<img src="img/wengjiajie/8.png" alt="">
-						<p>月嫂</p>
-					</a>
-				</div>
-				<div class="shendu-circle">
-					<a href="order/order-old-yuersao.html">
-						<img src="img/wengjiajie/9.png" alt="">
-						<p>育儿嫂</p>
-					</a>
-				</div> -->
             </div>
         </div>
     </div>
