--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -14,8 +14,12 @@
                 <!-- Tab 1, 默认激活 -->
                 <div id="tab1" class="tab active">
                     <div class="content-block">
-                        <div class="beijing-index" id="order-list-div">
-
+                        <div class="beijing-index" >
+							<div class="list-block">
+					        	<ul id="order-list-div">
+					        	
+					        	</ul>
+					        	</div>
                         </div>
                         <div class="all-button5" id="order-list-more" style="display:none">加载更多</div>
                         <input type="hidden" id="page" name="page" value="1"/>
@@ -36,8 +40,7 @@
         </div>
         <!-- tab1订单模板 -->
         <div id="order-list-part" style="display: none">
-        	<div class="list-block">
-            <div class="swipeout">
+        	<li class='media-list swipeout'>
                 <div class="dingdan-mokuai swipeout-content">
                     <p>订单明细</p>
                     <a href="#" onclick="orderView({orderType}, '{orderNo}')" class="special-color7">
@@ -102,8 +105,7 @@
                 <div class="swipeout-actions-right">
                     <a href="#" class="swipeout-delete order-delete-btn" data-confirm="是否删除订单?" onclick="delOrder({orderId})">删除</a>
                 </div>
-            </div>
-</div>
+            </li>
         </div>
 
         <!--tab2订单模板-->
