--- a/jhj-web-user/html/shareSuccess.html
+++ b/jhj-web-user/html/shareSuccess.html
@@ -52,12 +52,12 @@
                 </a>
 
                 <a href="#" id="toolbar-huodong" onclick="toolBarHref('huodong-list.html', 'toolbar-huodong')" class="no-animation link" style="color:#000;">
-                    <i class="icon toolbar-icon-zhuli"></i>
+                    <i class="icon toolbar-icon-charge"></i>
                     <span class="tabbar-label">充值</span>
                 </a>
 
                 <a href="#" id="toolbar-youzan" onclick="toolBarHref('youzan.html', 'toolbar-youzan')" class="no-animation link" style="color:#000;">
-                    <i class="icon toolbar-icon-my"></i>
+                    <i class="icon toolbar-icon-tixing"></i>
                     <span class="tabbar-label">我的</span>
                 </a>
             </div>
