--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="item-subtitle">
                                     <ul class="housework-4">
-                                        <li>总次数:<b class="total">{total}</b></li>
+                                        <li>{describle}:<b class="total">{total}</b></li>
                                     </ul>
                                 </div>
                                <!--  <div class="item-subtitle">
