--修正温馨提示

--- a/jhj-web-user/order/deepIntro/order-deep-intro-34.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-34.html
@@ -4,7 +4,8 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">单人床80-120cm宽  双人床150-200cm宽，床铺除螨包含床上用品四件套</p>
+    <p class="special-color1">1.单人床80-120cm宽  双人床150-200cm宽，床铺除螨包含床上用品四件套</p>
+    <p class="special-color1">2.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 
 <div class="shendu-bx">
