--- a/jhj-web-user/order/deepIntro/order-deep-intro-35.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-35.html
@@ -10,6 +10,7 @@
     <p class="special-color1">
         2.卫生间深度清洁包含洗衣机一台（免拆）的清洗，热水器表面清洗
     </p>
+    <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 <div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
