--- a/jhj-web-user/order/deepIntro/order-deep-intro-36.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-36.html
@@ -5,7 +5,8 @@
     </div>
     <p class="special-color1">温馨提示：</p>
     <p class="special-color1">1.油烟机如与实际机型不符时，服务人员将按照实际机型收费，差额部分多退少补</p>
-    <p>2.油机灶具套装不限油烟机机型</p>
+    <p class="special-color1">2.油机灶具套装不限油烟机机型</p>
+    <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 
 <div class="shendu-bx">
