--- a/jhj-web-user/order/deepIntro/order-deep-intro-50.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-50.html
@@ -4,7 +4,8 @@
 		<p>服务介绍</p>
 	</div>
 	<p class="special-color1">温馨提示：</p>
-	<p class="special-color1">冰箱清洗前需断电停机，清洗前需要把冰箱内的食品全部搬出清空。</p>
+	<p class="special-color1">1.冰箱清洗前需断电停机，清洗前需要把冰箱内的食品全部搬出清空。</p>
+    <p class="special-color1">2.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 <div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
