--- a/jhj-web-user/order/deepIntro/order-deep-intro-52.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-52.html
@@ -6,6 +6,7 @@
     <p class="special-color1">温馨提示：</p>
     <p class="special-color1">1.我们提供地板蜡，需要使用您自己的地板蜡，可在服务前和服务人员说明</p>
     <p class="special-color1">2.地板打蜡20平米起，不足20平米按20平米计算</p>
+    <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 
 <div class="shendu-bx">
