--- a/jhj-web-user/order/deepIntro/order-deep-intro-53.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-53.html
@@ -8,6 +8,7 @@
     <p class="special-color1">2.房屋大扫除按照建筑面积计算，服务开始前请您出示相关的房屋建筑面积证明</p>
     <p class="special-color1">3.房屋大扫除60平米起，不足60平米按60平米收费</p>
     <p class="special-color1">4.本服务包含擦玻璃服务，不包含地板打蜡服务</p>
+    <p class="special-color1">5.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 
 <div class="shendu-bx">
