--- a/jhj-web-user/order/deepIntro/order-deep-intro-79.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-79.html
@@ -4,7 +4,8 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">请参考实际机型下单，如上门服务后发现实际机型与下单机型不符，差额部分多退少补</p>
+    <p class="special-color1">1.请参考实际机型下单，如上门服务后发现实际机型与下单机型不符，差额部分多退少补</p>
+    <p class="special-color1">2.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
     <img src="img/taocan/kx1.jpg" alt="" class="all-img4">
     <img src="img/taocan/kx2.jpg" alt="" class="all-img4">
     <div class="chongzhi5-kong2"></div>
