--- a/jhj-web-user/order/deepIntro/order-deep-intro-80.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-80.html
@@ -6,6 +6,8 @@
     <p class="special-color1">1 单独订购贴心家事包，服务收费按贴心家事包结算。</p>
     <p class="special-color1">2 订购加时贴心家事包服务收费按照非会员30元/半小时，会员价25元/半小时结算。</p>
     <p class="special-color1">3 加时贴心包是指家政服务增加项，是用户在选择家政服务项目中超出服务部分额外的贴心服务选择项。</p>
+    <p class="special-color1">4 服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
+
     <div class="chongzhi5-kong2"></div>
 </div>
 
