--- a/jhj-web-user/order/deepIntro/order-deep-intro-83.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-83.html
@@ -13,6 +13,7 @@
     <p class="special-color1">
         2.需要橱柜内深度清洁和家电清洗的用户请选择【厨卫深度高温杀菌】下单。
     </p>
+    <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
     <div class="chongzhi5-kong2"></div>
 </div>
 <div class="shendu-bx">
