--- a/jhj-web-user/order/fiveservice/61.html
+++ b/jhj-web-user/order/fiveservice/61.html
@@ -16,6 +16,7 @@
                     4.包月订单按照您的需求一次排单，如需修改上门时间或临时取消请在服务开始前2小时致电客服调整时间，2小时内调整或取消将按照本次订单
                     金额的50%收取费用。
                 </p>
+                <p class="special-color1">5.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 
             </div>
             <div class="shendu-bx">
