--- a/jhj-web-user/order/fiveservice/orde-cook-intro.html
+++ b/jhj-web-user/order/fiveservice/orde-cook-intro.html
@@ -33,6 +33,7 @@
                     <p class="special-color1">1.本服务提供代购蔬菜、佐料的服务，代购也计入服务时间</p>
                     <p class="special-color1">2.代购原料请在留言中标清，费用上门后付清</p>
                     <p class="special-color1">3.服务员所做菜品仅限普通家常菜，如特殊菜品需求请咨询客服确认</p>
+                    <p class="special-color1">4.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
                 </div>
 
                 <div class="shendu-bx">
