--- a/jhj-web-user/order/order-old-man.html
+++ b/jhj-web-user/order/order-old-man.html
@@ -32,6 +32,8 @@
                 <p class="special-color1">1.翁家洁3个小时起步，如服务超时将按照非会员50元/小时，会员45元/小时收费</p>
                 <p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
                 <p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
+                <p class="special-color1">4.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
+
             </div>
             <div class="shendu-bx">
                 <div class="shendu-title" style="clear:both;margin-top:10px;">
