--- a/jhj-web-user/order/deepIntro/order-deep-intro-51.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-51.html
@@ -6,6 +6,7 @@
     <p class="special-color1">温馨提示：</p>
     <p class="special-color1">1.空调促销机型两台起订购</p>
     <p class="special-color1">2.如预约的空调机型与实际不符时，按实际收费，多退少补</p>
+    <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
 
 <div class="shendu-bx">
