--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -243,6 +243,7 @@
 
 <!-- 包月初体验  -->
 <script type="text/javascript" src="js/order/fiveservice/order-cus-hostwork-month.js"></script>
+<script type="text/javascript" src="js/order/fiveservice/order-cus-index.js"></script>
 
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="js/active/share.js"></script>
