--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -13,7 +13,7 @@
 				</div>
 			</div>
 			<div class="share-btn">
-                <img src="../img/share/share-button.png" alt="">
+                <img src="img/share/share-button.png" alt="">
                 <a href="#"></a>
             </div>
 		</div>
@@ -22,19 +22,19 @@
                  <ul class="clearfloat">
                      <li class="share-ope-btn" id="wechat_friend">
                          <a href="#">
-                             <img src="../img/share/wechat.png" alt="">
+                             <img src="img/share/wechat.png" alt="">
                              <span>微信好友</span>
                          </a>
                      </li>
                      <li class="share-ope-btn" id="friends_circle">
                          <a href="#">
-                             <img src="../img/share/friends_circle.png" alt="">
+                             <img src="img/share/friends_circle.png" alt="">
                              <span>朋友圈</span>
                          </a>
                      </li>
                      <li class="share-ope-btn" id="weibo">
                          <a href="#">
-                             <img src="../img/share/weibo.png" alt="">
+                             <img src="img/share/weibo.png" alt="">
                              <span>微博</span>
                          </a>
                      </li>
