--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -20,19 +20,19 @@
 		<div class="share-operation" style="display: none">
              <div class="share-opera-content">
                  <ul class="clearfloat">
-                     <li class="share-ope-btn" id="wechat_friend">
+                     <li class="share-ope-btn" id="onMenuShareAppMessage">
                          <a href="#">
                              <img src="img/share/wechat.png" alt="">
                              <span>微信好友</span>
                          </a>
                      </li>
-                     <li class="share-ope-btn" id="friends_circle">
+                     <li class="share-ope-btn" id="onMenuShareTimeline">
                          <a href="#">
                              <img src="img/share/friends_circle.png" alt="">
                              <span>朋友圈</span>
                          </a>
                      </li>
-                     <li class="share-ope-btn" id="weibo">
+                     <li class="share-ope-btn" id="onMenuShareWeibo">
                          <a href="#">
                              <img src="img/share/weibo.png" alt="">
                              <span>微博</span>
