--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -36,6 +36,9 @@
 								{{/js_compare}}
 								
 							</ul>
+
+							<a class="share-link" href="../active/share.html">分享得半价</a>
+							<div class="clear-both"></div>
 						</div>
 						<div class="order-my2">
 							<ul id="mine-about-us">
