--- a/jhj-web-user/active/share-success.html
+++ b/jhj-web-user/active/share-success.html
@@ -1,16 +1,171 @@
-<div data-page="order-xiadan" class="page">
+<div data-page="share-success" class="page">
     <div id="indexPageContentDiv" class="page-content">
+
         <div class="beijing-index">
-            <div class="share-bg">
-                <div class="share-word">
-                    <img src="img/share/share-word.png">
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务内容</p>
                 </div>
-                <div class="return-button">
-                    <img src="img/share/return-button.png" alt="">
-                    <a href="javascript:void(0)"></a>
+                <img src="img/jiawubaoyue/first.png" alt=""
+                     style="width:60%;margin:0 auto;display: block;margin-top: 10px;">
+                <h3 class="each-title">
+                    日常保洁
+                </h3>
+                <ul class="clean-list clearfloat">
+                    <li>
+                        <img src="img/jiawubaoyue/chufang.png" alt="">
+                        <span>厨房</span>
+                        <p>让油污重灾区清洁一新</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/weishengjian.png" alt="">
+                        <span>卫生间</span>
+                        <p>让油污重灾区清洁一新</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/woshi.png" alt="">
+                        <span>卧室</span>
+                        <p>清洁加整理 卧室美美哒</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/keting.png" alt="">
+                        <span>客厅</span>
+                        <p>干净又整洁 迎宾有面子</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/sun.png" alt="">
+                        <span>阳台</span>
+                        <p>阳光明媚好心情</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/canting.png" alt="">
+                        <span>餐厅</span>
+                        <p>整洁的环境 融洽的就餐氛围</p>
+                    </li>
+                </ul>
+                <h3 class="each-title" style="margin-top: 25px;">
+                    订制化服务
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <p class="special-p">什么叫订制化服务：下列服务也在服务范围</p>
+                <ul class="clean-list clearfloat">
+                    <li>
+                        <img src="img/jiawubaoyue/xiyi.png" alt="">
+                        <span>洗衣服</span>
+                        <p>连洗带晾 两不耽误</p>
+                    </li>
+                    <li>
+                        <img src="img/jiawubaoyue/jiaohua.png" alt="">
+                        <span>浇花</span>
+                        <p>您嘱咐 我就浇</p>
+                    </li>
+                </ul>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <p class="special-p-2">*</p>
+                <p class="special-p-2">上述服务内容、服务人员将按照整体服务流程或客户要求</p>
+                <p class="special-p-2"> 重点打扫区域订制服务。</p>
+            </div>
+            <div class="shendu-bx serverspecial">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务特点</p>
                 </div>
-                <div class="share-bottom">
-                    <img src="img/share/share-bottom.png" alt="">
+                <h3 class="each-title" style="margin-top: 25px;">
+                    五重筛选，三证合一
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <p>与传统中介家政不同、叮当到家所有家政服务员全部都是自营员工制。
+                    每一位上岗服务人员都有<span class="bright-colors" style="font-size:12px">身份证+技能证+健康证</span>
+                </p>
+                <img class="full-screen" src="img/jiawubaoyue/three-certificates.png" alt="">
+                <h3 class="each-title" style="margin-top: 25px;">
+                    两个月培训
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <p class="txt-center">
+                    一个月技能和礼仪培训+一个月师傅带岗实操
+                </p>
+                <img class="full-screen" src="img/jiawubaoyue/training.png" alt="">
+                <h3 class="each-title" style="margin-top: 25px;">
+                    黄金3小时
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <p class="txt-center">
+                    叮当到家经过数万单测试得出
+                <p class="txt-center bright-colors">
+                    3小时服务时长是最合理的时间安排
+                </p>
+                <p class="txt-center">
+                    能满足85%的客户家庭合理需求
+                </p>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <img class="full-screen" src="img/jiawubaoyue/time.png" alt="">
+
+                <div class="time-w">
+                    <p>
+                        2小时=时间太短，客户需要高价加时、不划算。
+                    </p>
+                    <p class="bright-colors">
+                        4小时=时间太长，服务人员磨洋工，耗时间、不划算。
+                    </p>
+                    <p>
+                        3小时=最合理的单次时长安排、划算！
+                    </p>
+                </div>
+
+                <h3 class="each-title" style="margin-top: 25px;">
+                    专业工具<br/>
+                    分区分功能
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <img class="full-screen" src="img/jiawubaoyue/tool.png" alt="">
+                <ul class="tool-list">
+                    <li>七色保洁布</li>
+                    <li>进口工具</li>
+                    <li>专用工具箱</li>
+                    <li>健康去油剂</li>
+                </ul>
+                <h3 class="each-title">
+                    价格透明<br/>
+                    无附加消费
+                </h3>
+                <div class="chongzhi5-kong2"></div>
+                <p class="txt-center">价格全部网上公示、线上付费、绝无附加消费</p>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <div class="chongzhi5-kong2"></div>
+                <img class="logo-jiawu" src="img/jiawubaoyue/logo-jiawu.png" alt="">
+                <h3 class="each-title" style="margin-top: 25px;">
+                    有比较才知服务之专业<br/>
+                    服务场景实拍
+                </h3>
+                <img class="full-screen" src="img/jiawubaoyue/server-actual.png" alt="">
+                <h3 class="each-title" style="margin-top: 25px;">
+                    最舒心的售后服务
+                </h3>
+                <p class="server-sun">
+                    <span class="zhanwei"></span>如果服务人员在服务过程中出现磨洋工、态度不好、技能不专业、可立即或服务完成后拨打客服电话，客服将在第一时间或您预订的时间安排其他服务员再次免费返工，直到您满意为止。
+                </p>
+                <h3 class="each-title" style="margin-top: 25px;">
+                    24小时专业客服
+                </h3>
+                <p class="txt-center">全程在线守候您的来电</p>
+                <div class="jiawu-bottom">
+                    <img src="img/jiawubaoyue/24h.png" alt="">
+                    <p class="txt-center">
+                        010-53511197
+                    </p>
+                </div>
+
+                <div class="share-btn">
+                    <img src="img/jiawubaoyue/yuding-btn.png" alt="">
+                    <a href="../active/share.html" class=""></a>
                 </div>
             </div>
         </div>
