--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -250,7 +250,7 @@
 
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="js/active/share.js"></script>
-
+<script type="text/javascript" src="js/active/share-success.js"></script>
 
 <script>
     var _hmt = _hmt || [];
