--- a/jhj-web-user/active/share-success.html
+++ b/jhj-web-user/active/share-success.html
@@ -158,14 +158,14 @@
                 <p class="txt-center">全程在线守候您的来电</p>
                 <div class="jiawu-bottom">
                     <img src="img/jiawubaoyue/24h.png" alt="">
-                    <p class="txt-center">
-                        010-53511197
-                    </p>
+                    <a href="tel:010-53511197" class="external txt-center">
+						 010-53511197			
+					</a>
                 </div>
 
                 <div class="share-btn">
                     <img src="img/jiawubaoyue/yuding-btn.png" alt="">
-                    <a href="../active/share.html" class=""></a>
+                    <a href="/u" class=""></a>
                 </div>
             </div>
         </div>
