--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -12,6 +12,9 @@
 					<li>3.优惠券有效期1个月，每邀请1位好友获得一张，三张封顶。</li>
 				</div>
 			</div>
+			<div class="share-tip">
+				<i></i> 请点击右上角分享给你的好友或朋友圈
+			</div>
 		</div>
 	</div>
 </div>
