--- a/jhj-web-user/html/share.html
+++ b/jhj-web-user/html/share.html
@@ -35,14 +35,18 @@
                                 <li>3.优惠券有效期1个月，每邀请1位好友获得一张，三张封顶。</li>
                             </div>
                         </div>
-                        <div class="share-btn">
+                      <!--  <div class="share-btn">
                             <img src="../img/share/share-button.png" alt="">
                             <a href="#"></a>
                         </div>
-
+-->
+                    </div>
+                    <div class="share-tip">
+                        <i></i> 请点击右上角分享给你的好友或朋友圈
                     </div>
                 </div>
-                <div class="share-operation" style="display: none">
+
+             <!--   <div class="share-operation" style="display: none">
                     <div class="share-opera-content">
                         <ul class="clearfloat">
                             <li class="share-ope-btn" id="wechat_friend">
@@ -68,7 +72,8 @@
                             <a href="#">取消</a>
                         </div>
                     </div>
-                </div>
+                </div>-->
+
             </div>
         </div>
 
