--- a/jhj-web-user/html/share.html
+++ b/jhj-web-user/html/share.html
@@ -35,44 +35,19 @@
                                 <li>3.优惠券有效期1个月，每邀请1位好友获得一张，三张封顶。</li>
                             </div>
                         </div>
-                      <!--  <div class="share-btn">
+                       <div class="share-btn">
                             <img src="../img/share/share-button.png" alt="">
                             <a href="#"></a>
                         </div>
--->
-                    </div>
-                    <div class="share-tip">
-                        <i></i> 请点击右上角分享给你的好友或朋友圈
+
                     </div>
                 </div>
 
-             <!--   <div class="share-operation" style="display: none">
-                    <div class="share-opera-content">
-                        <ul class="clearfloat">
-                            <li class="share-ope-btn" id="wechat_friend">
-                                <a href="#">
-                                    <img src="../img/share/wechat.png" alt="">
-                                    <span>微信好友</span>
-                                </a>
-                            </li>
-                            <li class="share-ope-btn" id="friends_circle">
-                                <a href="#">
-                                    <img src="../img/share/friends_circle.png" alt="">
-                                    <span>朋友圈</span>
-                                </a>
-                            </li>
-                            <li class="share-ope-btn" id="weibo">
-                                <a href="#">
-                                    <img src="../img/share/weibo.png" alt="">
-                                    <span>微博</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="share-delete" id="share-delete">
-                            <a href="#">取消</a>
-                        </div>
+                <div class="share-operation" style="display: none">
+                    <div class="share-head">
+                        <img src="../img/share/tishi.png" alt="">
                     </div>
-                </div>-->
+                </div>
 
             </div>
         </div>
