--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -11,13 +11,19 @@
             <div id="balance-account" class="housework1-2">结算</div>
         </a>
     </div>
+    <div id="popup" class="popup popup-about" >
+         	<div id="popup-content"></div>
+         	<p><a href="#" id="btn-ensure" class="button button-big all-button17 close-popup">返回</a></p>
+         </div>
     <div id="indexPageContentDiv" class="page-content">
         <div class="beijing-index">
             <div id="period-order-div">
 
             </div>
+            
 			<div class="kongdiv" />
         </div>
+        
 
         <div class="period-order-temp" style="display:none;">
             <div class="list-block media-list">
