--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -12,6 +12,10 @@
 					<li>3.优惠券有效期1个月，每邀请1位好友获得一张，三张封顶。</li>
 				</div>
 			</div>
+			<div class="share-btn">
+				<img src="../img/share/share-button.png" alt="">
+				<a href="#"></a>
+			</div>
 		</div>
 	</div>
 	<div class="share-operation" style="display: none">
