--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -7,7 +7,7 @@
 					<img src="img/order-pay-success/pay-success.png" alt="">
 					<p>您的订单已经支付成功</p>
 					<p class="all-button1"><a href="order/order-list.html" class="special-color7">查看订单</a></p>
-					<a class="share-link" href="../active/share.html">分享得半价</a>
+					<a class="share-link" href="active/share.html">分享得半价</a>
 					<div class="clear-both"></div>
 				</div>
 				<div class="order-pay-success" style="margin-top: 20px; padding: 0;">
