--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -37,7 +37,7 @@
 								
 							</ul>
 
-							<a class="share-link" href="../active/share.html">分享得半价</a>
+							<a class="share-link" href="active/share.html">分享得半价</a>
 							<div class="clear-both"></div>
 						</div>
 						<div class="order-my2">
