--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="share-operation" style="display: none">
 		<div class="share-head">
-			<img src="../img/share/tishi.png" alt="">
+			<img src="img/share/tishi.png" alt="">
 		</div>
 	</div>
 </div>
