--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -8,7 +8,7 @@
 					<p>您的订单已经支付成功</p>
 					<p class="all-button1"><a href="order/order-list.html" class="special-color7">查看订单</a></p>
 					<a class="share-link" href="active/share.html">
-						<img src="img/share/share-half.png" alt="">
+						<img src="img/share/share-half.png" alt="" style="margin-left:0">
 					</a>
 					<div class="clear-both"></div>
 				</div>
