--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="swipeout-actions-right">
-                    <a href="#" class="swipeout-delete order-delete-btn" data-confirm="是否删除订单?" onclick="delOrder({orderId})">删除</a>
+                    <a href="#" class="swipeout-delete order-delete-btn" data-confirm="是否删除订单?" onclick="delOrder({orderId},{orderStatus})">删除</a>
                 </div>
             </li>
         </div>
