--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -13,14 +13,14 @@
 				</div>
 			</div>
 			<div class="share-btn">
-				<img src="../img/share/share-button.png" alt="">
+				<img src="img/share/share-button.png" alt="">
 				<a href="#"></a>
 			</div>
 		</div>
 	</div>
 	<div class="share-operation" style="display: none">
 		<div class="share-head">
-			<img src="../img/share/tishi.png" alt="">
+			<img src="img/share/tishi.png" alt="">
 		</div>
 	</div>
 </div>
