--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -37,8 +37,8 @@
 								
 							</ul>
 
-							<a class="share-link" href="../active/share.html">
-								<img src="../img/share/share-half.png" alt="">
+							<a class="share-link" href="active/share.html">
+								<img src="img/share/share-half.png" alt="">
 							</a>
 							<div class="clear-both"></div>
 						</div>
