--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -50,8 +50,10 @@
                                 <div class="item-subtitle">
                                     <ul class="housework-4">
                                         <li>{describle}:<b class="total">{total}</b></li>
+                                        <li>{num-punit}</li> <!-- 频次:<b>{num}</b>{punit} -->
                                     </ul>
                                 </div>
+                               
                                <!--  <div class="item-subtitle">
                                     <ul class="housework-5">
                                         <input type="hidden" name="price" value="{price}"/>
