--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -16,7 +16,7 @@
                     <div class="content-block">
                         <div class="beijing-index" >
 							<div class="list-block">
-					        	<ul id="order-list-div">
+					        	<ul id="order-list-div" class="order-list-bg" style="background-color:#efeff4;">
 					        	
 					        	</ul>
 					        	</div>
