--- a/jhj-web-user/active/share.html
+++ b/jhj-web-user/active/share.html
@@ -9,8 +9,8 @@
 				<div class="share-content">
 					<li>1.将叮当到家活动页面分享到微信好友、朋友圈、微博等社交平台。</li>
 					<li>2.您的好友通过您分享的链接注册下单，您即刻获得一张70元金牌保洁优惠券。</li>
-					<li>3.优惠券有效期1个月，每邀请1位好友获得一张。</li>
-					<li>4.被邀请好友的下单地址不能与邀请人为同一服务地址,相同服务地址视为无效。</li>
+					<li>3.优惠券有效期1个月，每邀请1位好友获得一张。</li>s
+					<li>4.被邀请好友的下单地址不能与邀请人为同一服务，系统只随机计取一个相同地址。</li>
 				</div>
 			</div>
 			<div class="share-btn">
