--- a/jhj-web-user/order/fiveservice/order-cus-index.html
+++ b/jhj-web-user/order/fiveservice/order-cus-index.html
@@ -44,7 +44,7 @@
                     <p class="special-color10">￥780元起</p>
                 </div>
             </a>
-            <a href="order/period/period-order.html?package_type_id=4">
+            <a href="order/period/period-order.html?package_type_id=5">
                 <div class="dingzhi-list1-1 dingzhi-list1-full">
                     <p class="special-color9">套餐五</p>
                     <div class="dingzhi-list1-1-1">
@@ -92,19 +92,19 @@
                 </div>
                 <ul class="gongju-list clearfloat">
                     <li>
-                        <img src="../img/taocan/gongju3.png" alt="">
+                        <img src="img/taocan/gongju3.png" alt="">
                         <span>七色保洁布</span>
                     </li>
                     <li>
-                        <img src="../img/taocan/gongju2.png" alt="">
+                        <img src="img/taocan/gongju2.png" alt="">
                         <span>进口工具</span>
                     </li>
                     <li>
-                        <img src="../img/taocan/gongju4.png" alt="">
+                        <img src="img/taocan/gongju4.png" alt="">
                         <span>专用工具箱</span>
                     </li>
                     <li>
-                        <img src="../img/taocan/gongju1.png" alt="">
+                        <img src="img/taocan/gongju1.png" alt="">
                         <span>健康去油剂</span>
                     </li>
                 </ul>
