--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -26,13 +26,11 @@
 							<ul>
 								{{#js_compare "this.is_vip==1"}}
 									<li><img src="img/order-my/my-14.png" alt=""></li>
-									<li>会员级别</li>
 									<li>金牌会员</li>
 								{{/js_compare}}
 								{{#js_compare "this.is_vip==0"}}
 									<li><img src="img/order-my/my-13.png" alt=""></li>
-									<li>会员级别</li>
-									<li>普通用户</li>
+									<li>普通会员</li>
 								{{/js_compare}}
 								
 							</ul>
