--- a/jhj-web-user/order/deepIntro/order-deep-intro-35.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-35.html
@@ -8,7 +8,7 @@
         1.厨房深度清洁电器清洗部分包含厨房内所有厨电，家庭其他区域电器清洗不包含
     </p>
     <p class="special-color1">
-        2.卫生间深度清洁包含洗衣机一台（免拆）的清洗，热水器表面清洗
+        2.卫生间深度清洁包含洗衣机一台（免拆）的清洗
     </p>
     <p class="special-color1">3.服务前2小时（含）收取服务费50%的退改费；服务前1小时内及服务时间开始后不得退改订单。</p>
 </div>
@@ -18,7 +18,7 @@
         <p>服务内容</p>
     </div>
     <p>1.油烟机、灶台、微波炉、冰箱等厨房电器，橱柜内外深度清洗，全屋高温消毒杀菌。</p>
-    <p>2.洗衣机、热水器免拆清洗、卫生洁具、墙、地面除垢及表面擦拭，全屋高温消毒杀菌。</p>
+    <p>2.洗衣机、卫生洁具、墙、地面除垢及表面擦拭，全屋高温消毒杀菌。</p>
 </div>
 
 <div class="shendu-bx">
