--- a/jhj-web-user/order/deepIntro/order-deep-intro-83.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-83.html
@@ -26,7 +26,7 @@
         全屋高温消毒杀菌。
     </p>
     <p class="special-color1">
-        2.洗衣机、热水器表面清洗、卫生洁具、墙、地面除垢及表面擦拭，
+        2.洗衣机、卫生洁具、墙、地面除垢及表面擦拭，
         全屋高温消毒杀菌
     </p>
     <div class="chongzhi5-kong2"></div>
