--- a/jhj-web-user/active/share-success.html
+++ b/jhj-web-user/active/share-success.html
@@ -3,70 +3,73 @@
 
         <div class="beijing-index">
             <div class="shendu-bx">
-                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                <div class="shendu-title" style="clear:both;">
                     <div class="shendu-title-1"></div>
                     <p>服务内容</p>
                 </div>
-                <img src="img/jiawubaoyue/first.png" alt=""
-                     style="width:60%;margin:0 auto;display: block;margin-top: 10px;">
+                <img class="logo-share" src="img/share/logo-share.png" alt="">
+                <p>
+                    <i class="icon-space"></i>以洁为贵，生活的准则是洁之首，不仅是环境卫生、饮食卫生，更多的是一种生活哲学；以癖为性，生活的品味是癖为准，不仅是生活质量、生活状态，更多的是一种生活态度。
+                </p>
+                <img class="logo-big-share" src="img/share/logo-big-share.png" alt="">
                 <h3 class="each-title">
-                    日常保洁
+                    放大细节，发现生活！
                 </h3>
+                <p class="special-color1" style="margin-top: 7px;">
+                    <i class="icon-space"></i> 居家卫生：78项高优服务内容，108项服务标准，360°无死角清洁，行业内开放首家服务员洁癖式自检，不放过每一个细节。
+                </p>
                 <ul class="clean-list clearfloat">
                     <li>
-                        <img src="img/jiawubaoyue/chufang.png" alt="">
-                        <span>厨房</span>
-                        <p>让油污重灾区清洁一新</p>
+                        <img src="img/share/piju.png" alt="">
+                        <span class="span-title">皮具养护</span>
                     </li>
                     <li>
-                        <img src="img/jiawubaoyue/weishengjian.png" alt="">
-                        <span>卫生间</span>
-                        <p>让油污重灾区清洁一新</p>
+                        <img src="img/share/chuangcao.png" alt="">
+                        <span class="span-title">清理窗槽</span>
                     </li>
                     <li>
-                        <img src="img/jiawubaoyue/woshi.png" alt="">
-                        <span>卧室</span>
-                        <p>清洁加整理 卧室美美哒</p>
+                        <img src="img/share/dilou.png" alt="">
+                        <span class="span-title">清洁地漏</span>
                     </li>
                     <li>
-                        <img src="img/jiawubaoyue/keting.png" alt="">
-                        <span>客厅</span>
-                        <p>干净又整洁 迎宾有面子</p>
-                    </li>
-                    <li>
-                        <img src="img/jiawubaoyue/sun.png" alt="">
-                        <span>阳台</span>
-                        <p>阳光明媚好心情</p>
-                    </li>
-                    <li>
-                        <img src="img/jiawubaoyue/canting.png" alt="">
-                        <span>餐厅</span>
-                        <p>整洁的环境 融洽的就餐氛围</p>
+                        <img src="img/share/chuwei.png" alt="">
+                        <span class="span-title">厨卫消毒</span>
                     </li>
                 </ul>
                 <h3 class="each-title" style="margin-top: 25px;">
-                    订制化服务
+                    贴心，更省心！
                 </h3>
                 <div class="chongzhi5-kong2"></div>
-                <p class="special-p">什么叫订制化服务：下列服务也在服务范围</p>
+                <p class="special-color1">
+                    <i class="icon-space"></i> 20+日常贴心家事，保洁中力所能及的琐事，你不说、我照做。实现客户家=自己家
+                </p>
                 <ul class="clean-list clearfloat">
                     <li>
-                        <img src="img/jiawubaoyue/xiyi.png" alt="">
-                        <span>洗衣服</span>
-                        <p>连洗带晾 两不耽误</p>
+                        <img src="img/share/xiyi.png" alt="">
+                        <span class="span-title">洗衣服</span>
                     </li>
                     <li>
-                        <img src="img/jiawubaoyue/jiaohua.png" alt="">
-                        <span>浇花</span>
-                        <p>您嘱咐 我就浇</p>
+                        <img src="img/share/jiaohua.png" alt="">
+                        <span class="span-title">浇花</span>
+                    </li>
+                    <li>
+                        <img src="img/share/clean.png" alt="">
+                        <span class="span-title">空间整理</span>
+                    </li>
+                    <li>
+                        <img src="img/share/canju.png" alt="">
+                        <span class="span-title">清洗餐具</span>
                     </li>
                 </ul>
+                <h3 class="each-title" style="margin-top: 25px;">
+                    比较，更有说服力
+                </h3>
                 <div class="chongzhi5-kong2"></div>
+                <p class="special-color1">
+                    <i class="icon-space"></i> 我们不擅长制造惊喜，却想给您更多意想不到，意想不到的服务品质，只有对比才有说服力。
+                </p>
                 <div class="chongzhi5-kong2"></div>
-                <div class="chongzhi5-kong2"></div>
-                <p class="special-p-2">*</p>
-                <p class="special-p-2">上述服务内容、服务人员将按照整体服务流程或客户要求</p>
-                <p class="special-p-2"> 重点打扫区域订制服务。</p>
+                <img style="display: block;margin: 0 auto;width: 87.5%" src="img/share/vs.png" alt="">
             </div>
             <div class="shendu-bx serverspecial">
                 <div class="shendu-title" style="clear:both;margin-top:10px;">
