--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -36,6 +36,9 @@
                             <div class="swiper-slide">
                                 <a href="active/share.html"><img src="img/indexthree/banner7.png" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
+                            <div class="swiper-slide">
+                                <a href="#"><img src="img/indexthree/banner11.jpg" alt="" style="width: 100%; padding: 0;"></a>
+                            </div>
                         </div>
                     </div>
                     <!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
