--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -31,9 +31,6 @@
                                 <a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="order/order-deep-intro.html?service_type_id=51"><img src="img/indexthree/banner10.jpg" alt="" style="width: 100%; padding: 0;"></a>
-                            </div>
-                            <div class="swiper-slide">
                                 <a href="active/share.html"><img src="img/indexthree/banner7.png" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                             <div class="swiper-slide">
@@ -253,6 +250,8 @@
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="js/active/share.js"></script>
 <script type="text/javascript" src="js/active/share-success.js"></script>
+
+<script type="text/javascript" src="js/active/20170701.js"></script>
 
 <script>
     var _hmt = _hmt || [];
