--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -34,7 +34,7 @@
                                 <a href="active/share.html"><img src="img/indexthree/banner7.png" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="#"><img src="img/indexthree/banner11.jpg" alt="" style="width: 100%; padding: 0;"></a>
+                                <a href="active/20170701.html"><img src="img/indexthree/banner11.jpg" alt="" style="width: 100%; padding: 0;"></a>
                             </div>
                         </div>
                     </div>
